# gauntlet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: threat-model.md
src/gauntlet/: __init__.py  cli.py  config.py
src/gauntlet/attacks/: __init__.py  base.py  oracles.py  runner.py
src/gauntlet/attacks/corpus/: direct_injection.jsonl  exfiltration.jsonl  indirect_injection.jsonl  jailbreak.jsonl  tool_abuse.jsonl
src/gauntlet/defense/: __init__.py  input_guard.py  output_guard.py  policy_engine.py  prompt_hardening.py  stack.py
src/gauntlet/detect/: __init__.py  detector.py  events.py  incident.py
src/gauntlet/llm/: __init__.py  client.py  types.py
src/gauntlet/report/: __init__.py  build.py  render.py  scoring.py
tests/: test_cli.py  test_corpus.py  test_defended_run.py  test_defense.py  test_detect.py  test_http_adapter.py  test_llm_client.py  test_oracles.py  test_reference_agent.py  test_report.py  test_runner.py
